--- a/ColorGame.css
+++ b/ColorGame.css
@@ -1,5 +1,7 @@
 body {
   background-color: #232323;
+  margin: 0;
+  font-family: "Montserrat", "Avenir";
 }
 
 .square {
@@ -8,15 +10,26 @@ body {
   padding-bottom: 30%;
   float: left;
   margin: 1.66%;
+  border-radius: 15%;
+  transition: background-color 0.6s;
+  --webkit-transition: background-color 0.6s;
+  --moz-transition: background-color 0.6s;
 }
 
 #container {
-  margin: 0 auto;
+  margin: 20px auto;
   max-width: 600px;
 }
 
 h1 {
+  font-weight: normal;
+  line-height: 1.1;
   color: white;
+  text-align: center;
+  background-color: steelblue;
+  margin: 0;
+  text-transform: uppercase;
+  padding: 20px 0;
 }
 
 #stripe {
@@ -26,5 +39,35 @@ h1 {
 }
 
 .selected {
-  background: blue;
+  color: white;
+  background-color: steelblue;
+}
+
+#colorDisplay {
+  font-size: 200%;
+}
+
+button {
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  height: 100%;
+  font-weight: 700;
+  color: steelblue;
+  letter-spacing: 1px;
+  font-size: inherit;
+  transition: all 0.3s;
+  --webkit-transition: all 0.3s;
+  --moz-transition: all 0.3s;
+  outline: none;
+}
+
+#message {
+  display: inline-block;
+  width: 20%;
+}
+
+button:hover {
+  color: white;
+  background-color: steelblue;
 }
